--- a/coolwater.css
+++ b/coolwater.css
@@ -29,8 +29,11 @@ span.cm-variable	{ color: #0056ba; }
 
 /* MISC ---------------------------------------------------------------------- */
 
-.CodeMirror,
-.CodeMirror .CodeMirror-scroll {
+.CodeMirror {
+    line-height: 1.4;
+}
+
+.CodeMirror-scroll {
 	background: #fff;
 	color: #4d6071;
 }
